Adjusted User Get endpoints